Fixing issue of loading XSD schema validator in Unit test suite